kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Hospital-Management-System
  labels:
    app: HospitalManagementSystem
spec:
  replicas: 3
  selector:
    matchLabels:
      app: HospitalManagementSystem
  template:
    metadata:
      labels:
        app: HospitalManagementSystem
    spec:
      containers:
      - name: HospitalManagementSystem
        image: ayaigadern/hospital-system:1.0
        ports: 
        - containerPort: 8080
        resources: 
          requests:
            cpu: 500m
            memory: 1000Mi
          limits:
            memory: 1500Mi
