kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-system-service
spec:
  selector:
    app: HospitalManagementSystem
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
